code refactoring for sonar fixes